Fixed bug in static file routes

--- a/skeleton/views/main/main-index.mustache
+++ b/skeleton/views/main/main-index.mustache
@@ -1,1 +1,8 @@
-<h1>Welcome to CoreJS</h1>
+<h1>{{app.config.title}}</h1>
+
+{{#session.user}}
+<p>Welcome</p>
+{{/session.user}}
+{{^session.user}}
+<p>You are not logged in. <a href="/auth">Authenticate &rarr;</a></p>
+{{/session.user}}
