--- a/skeleton/views/main/main-index.mustache
+++ b/skeleton/views/main/main-index.mustache
@@ -1,8 +1,7 @@
 <h1>{{app.config.title}}</h1>
 
 {{#session.user}}
-<p>Welcome</p>
-{{/session.user}}
-{{^session.user}}
+<p>Welcome <strong>{{session.user}}</strong>!</p>
+{{/session.user}}{{^session.user}}
 <p>You are not logged in. <a href="/auth">Authenticate &rarr;</a></p>
 {{/session.user}}
